--- a/.gitignore
+++ b/.gitignore
@@ -1,209 +1,63 @@
-# Byte-compiled / optimized / DLL files
+# Python bytecode and caches
 __pycache__/
 *.py[cod]
 *$py.class
 
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
+# Build and distribution
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
 .eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
-.installed.cfg
 *.egg
-MANIFEST
 
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
-
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow
-__pypackages__/
-
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
-
-# SageMath parsed files
-*.sage.py
-
-# Environments
-.env
-.venv
-env/
+# Virtual environments
+.venv/
 venv/
+env/
 ENV/
-env.bak/
-venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Logs
+*.log
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Machine Learning specific
-*.h5
-*.hdf5
-*.pkl
-*.pickle
-*.joblib
-*.model
-*.weights
-*.ckpt
-*.pb
-*.onnx
-*.tflite
-
-# Model checkpoints and logs
-checkpoints/
-logs/
-runs/
-wandb/
-mlruns/
-
-# Dataset files
-datasets/
-data/
-*.csv
-*.json
-*.xml
-*.txt
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.bmp
-*.tiff
-*.avi
-*.mp4
-*.mov
-*.mkv
-
-# Training outputs
-training_history.png
-model_evaluation.png
-detection_frame_*.jpg
-
-# Kaggle datasets
-.kaggle/
-
-# IDE specific
+# IDE/editor
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
+*.code-workspace
 
-# OS specific
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
-# Temporary files
-*.tmp
-*.temp
-*.bak
-*.backup
+# Jupyter
+.ipynb_checkpoints/
 
-# Configuration files with sensitive data
-config.ini
-secrets.json
-.env.local
-.env.production
+# Project outputs and artifacts
+outputs/
+!outputs/.gitkeep
+runs/
+ultralytics/
 
-# Output directories
-output/
-results/
-saved_models/
-models/
+# Videos and large media
+test_videos/
+!test_videos/.gitkeep
+*.mp4
+*.avi
+*.mov
+*.mkv
+*.wmv
+*.flv
+*.webm
+
+# Model weights and large binaries
+*.pt
+*.onnx
+*.engine
+
+# Caches
+.cache/
+*.cache
+**/labels.cache
+
+# Misc
+*.swp
+*.swo
